    over "built-in" Automake macros.  For example (assuming Automake
    is installed in the /usr/local hierarchy), a definition of the
    AM_PROG_VALAC macro found in '/usr/local/share/aclocal/my-vala.m4'
    should take precedence over the same-named automake-provided macro
    (defined in '/usr/local/share/aclocal-1.14/vala.m4').

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 1.13.1:

* Bugs fixed:

  - Use of the obsolete macros AM_CONFIG_HEADER or AM_PROG_CC_STDC now
    causes a clear and helpful error message, instead of obscure ones
    (issue introduced in Automake 1.13).

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 1.13:

* Bugs fixed:

  - ylwrap renames properly header guards in generated header files
    (*.h), instead of leaving Y_TAB_H.

  - ylwrap now also converts header guards in implementation files
    (*.c).  Because ylwrap failed to rename properly #include in the
    implementation files, current versions of Bison (e.g., 2.7)
    duplicate the generated header file in the implementation file.
    The header guard then protects the implementation file from
    duplicate definitions from the header file.

* Version requirements:

  - Autoconf 2.65 or greater is now required.

  - The rules to build PDF and DVI output from Texinfo input now
    require Texinfo 4.9 or later.

* Obsolete features:

  - Support for the "Cygnus-style" trees (once enabled by the 'cygnus'
    option) has been removed.  See discussion about automake bug#11034
    for more background: <http://debbugs.gnu.org/11034>.

  - The deprecated aclocal option '--acdir' has been removed.  You
    should use the options '--automake-acdir' and '--system-acdir'
    instead (which have been introduced in Automake 1.11.2).

  - The following long-obsolete m4 macros have been removed:

      AM_PROG_CC_STDC:    superseded by AC_PROG_CC since October 2002