@@ -2993,9 +2993,12 @@ sub scan_texinfo_file ($)
 	  next if $outfile;
 
 	  $outfile = $1;
-	  # TODO: In Automake 1.14 (or even 1.13.2), start warning against
-	  # TODO: suffixes != ".info", to ease transition to Automake-NG.
-	  if ($outfile =~ /\.([^.]+)$/ && $1 ne 'info')
+	  if (index ($outfile, '.') < 0)
+	    {
+	      msg 'obsolete', "$filename:$.",
+	          "use of suffix-less info files is discouraged"
+	    }
+	  elsif ($outfile !~ /\.info$/)
 	    {
 	      error ("$filename:$.",
 		     "output '$outfile' has unrecognized extension");
